Optimize HTTP to HTTPS redirect handling
- Enhanced .htaccess redirect rules to handle all HTTP/HTTPS and www/non-www combinations
- Improved redirect logic to prevent double redirects
- Created comprehensive HTTP_REDIRECT_FIX.md documentation
- Added redirect testing matrix and validation steps
- Optimized for Google Search Console 'Page with redirect' issue resolution

This addresses GSC reports of HTTP versions being redirected rather than indexed,
which is the expected and correct behavior for HTTPS-only sites.

--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,17 @@
 # Force HTTPS and redirect www to non-www
 RewriteEngine On
 
-# Redirect www to non-www
-RewriteCond %{HTTP_HOST} ^www\.forge-calculator\.com [NC]
+# Redirect all HTTP traffic to HTTPS (including www)
+RewriteCond %{HTTPS} off
 RewriteRule ^(.*)$ https://forge-calculator.com/$1 [R=301,L]
 
-# Force HTTPS
+# Redirect HTTPS www to HTTPS non-www
+RewriteCond %{HTTP_HOST} ^www\.forge-calculator\.com [NC]
+RewriteCond %{HTTPS} on
+RewriteRule ^(.*)$ https://forge-calculator.com/$1 [R=301,L]
+
+# Handle HTTP www to HTTPS non-www (double redirect prevention)
+RewriteCond %{HTTP_HOST} ^www\.forge-calculator\.com [NC]
 RewriteCond %{HTTPS} off
 RewriteRule ^(.*)$ https://forge-calculator.com/$1 [R=301,L]
 
