Fix Yandex 4xx errors and improve error handling
- Created custom 404.html page with proper styling and navigation
- Enhanced vercel.json with additional redirects and cleanUrls
- Added redirects for common blog URL variations
- Created comprehensive Yandex 4xx error fix guide
- Added site health check script for monitoring
- Improved error handling and user experience

This addresses the Yandex Webmaster warning about 4xx HTTP errors
and provides better handling for missing or moved pages.

--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,16 @@
       ],
       "destination": "https://forge-calculator.com/$1",
       "permanent": true
+    },
+    {
+      "source": "/blog-mastering-the-forge.html",
+      "destination": "/blog/mastering-the-forge.html",
+      "permanent": true
+    },
+    {
+      "source": "/blog-introducing-calculator.html", 
+      "destination": "/blog/introducing-calculator.html",
+      "permanent": true
     }
   ],
   "headers": [
@@ -43,5 +53,6 @@
       ]
     }
   ],
-  "trailingSlash": false
+  "trailingSlash": false,
+  "cleanUrls": true
 }
