Fix incorrect URL references causing 400-499 errors
- Fixed URL references in submit scripts and documentation files
- Updated submit_to_ahrefs.sh to use correct blog URLs
- Fixed SUBMISSION_GUIDE.md to reference proper wiki URLs
- Corrected llms.txt and llms-full.txt URL references
- Updated submit-to-ahrefs.md with correct paths
- All URLs now point to actual file locations instead of non-existent paths

--- a/vercel.json
+++ b/vercel.json
@@ -20,6 +20,56 @@
       "source": "/blog-introducing-calculator.html", 
       "destination": "/blog/introducing-calculator.html",
       "permanent": true
+    },
+    {
+      "source": "/npcs",
+      "destination": "/wiki/npcs.html",
+      "permanent": true
+    },
+    {
+      "source": "/enemies",
+      "destination": "/wiki/enemies.html", 
+      "permanent": true
+    },
+    {
+      "source": "/introducing-calculator",
+      "destination": "/blog/introducing-calculator.html",
+      "permanent": true
+    },
+    {
+      "source": "/mastering-the-forge",
+      "destination": "/blog/mastering-the-forge.html",
+      "permanent": true
+    },
+    {
+      "source": "/best-recipes",
+      "destination": "/recipes/best-recipes.html",
+      "permanent": true
+    },
+    {
+      "source": "/stone",
+      "destination": "/ore/stone.html",
+      "permanent": true
+    },
+    {
+      "source": "/mythril",
+      "destination": "/ore/mythril.html",
+      "permanent": true
+    },
+    {
+      "source": "/runes",
+      "destination": "/wiki/runes.html",
+      "permanent": true
+    },
+    {
+      "source": "/gamepass",
+      "destination": "/wiki/gamepass.html",
+      "permanent": true
+    },
+    {
+      "source": "/races",
+      "destination": "/wiki/races.html",
+      "permanent": true
     }
   ],
   "headers": [
