--- a/.htaccess
+++ b/.htaccess
@@ -1,25 +1,32 @@
-# Enhanced HTTPS and canonical domain enforcement
+# The Forge Calculator - URL Canonicalization and SEO Rules
+# 铁匠铺计算器 - URL规范化和SEO规则
+
+# Enable URL Rewriting
 RewriteEngine On
 
-# Force HTTPS and canonical domain in one step
-RewriteCond %{HTTPS} off [OR]
-RewriteCond %{HTTP_HOST} ^www\. [NC]
-RewriteRule ^(.*)$ https://forge-calculator.com/$1 [R=301,L]
+# Force HTTPS and non-www (Combined for efficiency)
+# 强制 HTTPS 和非 www（合并以提高效率）
+RewriteCond %{HTTP_HOST} ^www\.forge-calculator\.com [NC,OR]
+RewriteCond %{HTTPS} off
+RewriteRule ^(.*)$ https://forge-calculator.com/$1 [L,R=301]
 
-# Ensure canonical domain for any other variations
-RewriteCond %{HTTP_HOST} !^forge-calculator\.com$ [NC]
-RewriteCond %{HTTPS} on
-RewriteRule ^(.*)$ https://forge-calculator.com/$1 [R=301,L]
+# ============================================
+# URL Canonicalization and Parameter Handling
+# ============================================
 
-# Security headers
-<IfModule mod_headers.c>
-    Header always set X-Content-Type-Options nosniff
-    Header always set X-Frame-Options DENY
-    Header always set X-XSS-Protection "1; mode=block"
-    Header always set Referrer-Policy "strict-origin-when-cross-origin"
-    Header always set Permissions-Policy "geolocation=(), microphone=(), camera=()"
-</IfModule>
+# Redirect homepage with tracking parameters to clean URL
+# 重定向带跟踪参数的首页到干净URL
+RewriteCond %{QUERY_STRING} ^(ref=|utm_source=|utm_medium=|utm_campaign=|utm_content=|utm_term=|fbclid=).*$
+RewriteRule ^$ /? [R=301,L]
 
+# Internal rewrite to serve .html files for clean URLs
+# 内部重写以为干净URL提供.html文件
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME}.html -f
+RewriteRule ^(.*)$ $1.html [L]
+
+#
 # Cache control for static assets
 <IfModule mod_expires.c>
     ExpiresActive On
